--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to DigitalOcean Droplet
 on:
   push:
     branches:
-      - master  # Ou a branch que deseja usar para o deploy automático
+      - master
 
 jobs:
   deploy:
@@ -13,15 +13,21 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Deploy to Droplet via SSH
-        uses: appleboy/ssh-action@v0.1.9
+      - name: Add SSH Key
+        uses: webfactory/ssh-agent@v0.8.1
         with:
-          host: ${{ secrets.SERVER_IP }}  # Adicione o IP da Droplet em Settings > Secrets
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          script: |
-            # Comandos de deploy, como copiar arquivos ou atualizar dependências
-            rsync -avz --delete ./ /root/paylegend
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Copy Files to Droplet
+        run: |
+          scp -r -o StrictHostKeyChecking=no ./ ${{ secrets.SSH_USERNAME }}@${{ secrets.SERVER_IP }}:/root/paylegend
+
+      - name: Run Post-Deploy Commands
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USERNAME }}@${{ secrets.SERVER_IP }} << 'EOF'
             cd /root/paylegend
-            # Adicione outros comandos necessários, como `composer install`, `php artisan migrate`, etc.
+            # Adicione aqui os comandos necessários para o seu ambiente, como:
+            # composer install --no-dev --optimize-autoloader
+            # php artisan migrate --force
+            # systemctl restart apache2  # Ou qualquer outro serviço
+          EOF
