--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,64 @@
+version: '3.3'
+
 services:
+  # Serviço Backend (Symfony)
   backend:
     build:
-      context: ./paylegend
+      context: /root/paylegend/paylegend
+      dockerfile: Dockerfile
     container_name: paylegend-api
-    ports:
-      - "8000:8000"  # Ajuste a porta conforme necessário
-    volumes:
-      - ./paylegend:/var/www/html
     environment:
-      - DB_HOST=db
-      - DB_USER=user
-      - DB_PASS=357789
-      - RABBITMQ_HOST=queue
-      - RABBITMQ_PORT=5672
-      - RABBITMQ_USER=user
-      - RABBITMQ_PASS=357789
+      DB_HOST: db
+      DB_PASS: "357789"
+      DB_USER: user
+      RABBITMQ_HOST: queue
+      RABBITMQ_PASS: "357789"
+      RABBITMQ_PORT: "5672"
+      RABBITMQ_USER: user
+    networks:
+      - paylegend-api_network
+    ports:
+      - "8000:8000"
+    volumes:
+      - /root/paylegend/paylegend:/var/www/html
 
+  # Serviço Banco de Dados (MariaDB)
   db:
-    image: mariadb:11.5-rc
     container_name: mariadb
     environment:
-      MYSQL_ROOT_PASSWORD: 'MzYgODMgNzYgZmEgNzIgODIgZDkgYWEgYzggZjcg'
       MYSQL_DATABASE: paylegend
+      MYSQL_PASSWORD: "357789"
+      MYSQL_ROOT_PASSWORD: MzYgODMgNzYgZmEgNzIgODIgZDkgYWEgYzggZjcg
       MYSQL_USER: user
-      MYSQL_PASSWORD: '357789'
+    image: mariadb:11.5-rc
+    networks:
+      - paylegend-api_network
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-    
+
+  # Serviço RabbitMQ
   queue:
-    image: rabbitmq:4.0-rc-management
     container_name: rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_PASS: "357789"
+      RABBITMQ_DEFAULT_USER: user
+    image: rabbitmq:4.0-rc-management
+    networks:
+      - paylegend-api_network
     ports:
       - "5672:5672"
-      - "15672:15672"  # Porta para acessar a interface de administração do RabbitMQ
-    environment:
-      RABBITMQ_DEFAULT_USER: user
-      RABBITMQ_DEFAULT_PASS: '357789'
+      - "15672:15672"
     volumes:
       - queue_data:/var/lib/rabbitmq
 
+# Redes
+networks:
+  paylegend-api_network:
+    driver: bridge
+
+# Volumes
 volumes:
   db_data:
   queue_data:
