--- a/paylegend/config/packages/doctrine.yaml
+++ b/paylegend/config/packages/doctrine.yaml
@@ -28,6 +28,12 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Transaction/src/Entity'
                 prefix: 'App\Transaction\src\Entity'
                 alias: Transaction
+            BalanceBundle:
+                type: attribute
+                is_bundle: false
+                dir: '%kernel.project_dir%/src/Balance/src/Entity'
+                prefix: 'App\Balance\src\Entity'
+                alias: Balance
         controller_resolver:
             auto_mapping: false
 
