--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# version: '3.3'
-
 services:
   # Serviço Backend (Symfony)
   backend:
@@ -24,7 +22,7 @@ services:
 
   # Serviço Banco de Dados (MariaDB)
   db:
-    container_name: mariadb
+    container_name: mariadb-paylegend
     environment:
       MYSQL_DATABASE: paylegend
       MYSQL_PASSWORD: "357789"
@@ -40,7 +38,7 @@ services:
 
   # Serviço RabbitMQ
   queue:
-    container_name: rabbitmq
+    container_name: rabbitmq-paylegend
     environment:
       RABBITMQ_DEFAULT_PASS: "357789"
       RABBITMQ_DEFAULT_USER: user
